web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-declar-name/parent-async-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,14)
2|    function await() {
 |            ^
